unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation_Line2__c/fields/AcctSeed__Bank_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
    <label>Bank Reconciliation</label>
    <referenceTo>AcctSeed__Bank_Reconciliation__c</referenceTo>
    <relationshipName>Bank_Reconciliation_Lines1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>