unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation_Line2__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <formula>IF( AcctSeed__Amount__c &lt;=0, "Disbursement", "Deposit")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>