unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation_Line2__c/validationRules/AcctSeed__Reconciliation_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Reconciliation_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(AcctSeed__Bank_Reconciliation_Status__c))</errorConditionFormula>
    <errorDisplayField>AcctSeed__Bank_Reconciliation_Status__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>